# wix-scanner

./: .gitignore  Makefile  README.md
backend/: .env.example  Dockerfile  ENVIRONMENT_SETUP.md  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/api/routes/: admin_auth_settings.py  admin_bindings.py  admin_credentials.py  admin_event_blocks.py  admin_readiness.py  admin_reconciliation.py  admin_reset.py  admin_scopes.py  admin_sync_controls.py  bootstrap.py  checkins.py  health.py  manifest.py  metrics.py  (+4 more)
backend/app/core/: config.py
backend/app/middleware/: request_timing.py
backend/app/models/: __init__.py
backend/app/services/: auth_settings.py  checkin_webhooks.py  credential_lifecycle.py  credentials.py  event_block_config.py  event_broadcast.py  event_readiness.py  offline_queue.py  qr_parser.py  reconciliation.py  relay_contract.py  reset_audit.py  scan_idempotency.py  scan_runtime.py  site_event_binding.py  sync_controls.py  ticket_manifest.py  wix_client.py  wix_scope_audit.py  worker_health.py
backend/tests/: conftest.py  test_auth_settings.py  test_backend_scan_dedup_integration.py  test_credential_lifecycle.py  test_credentials_provider.py  test_encrypted_credential_persistence.py  test_event_block_config.py  test_event_readiness.py  test_grace_period.py  test_health.py  test_reconciliation.py  test_relay_contract.py  test_reset_audit.py  test_scan_deduplication.py  test_scanner_endpoints.py  test_scope_verification.py  test_site_event_bindings.py  test_sync_controls.py  test_wix_client.py
(+68 files in other folders)
